--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "@angular/animations": "~13.0.0",
+    "@angular/cdk": "^17.2.0",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
     "@angular/core": "~13.0.0",
@@ -21,6 +22,7 @@
     "@angular/router": "~13.0.0",
     "@auth0/angular-jwt": "^5.0.2",
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "@swimlane/ngx-charts": "^20.5.0",
     "bootstrap": "^5.1.3",
     "g": "^2.0.1",
     "rxjs": "~7.4.0",
