--- a/angular.json
+++ b/angular.json
@@ -81,11 +81,11 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "SeguimientoProyectos:build:production"
+              "buildTarget": "SeguimientoProyectos:build:production"
             },
             "development": {
-              "browserTarget": "SeguimientoProyectos:build:development",
-	      "port": 4400
+              "port": 4400,
+        "buildTarget": "SeguimientoProyectos:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -93,7 +93,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "SeguimientoProyectos:build"
+            "buildTarget": "SeguimientoProyectos:build"
           }
         },
         "test": {
